src/app/components/aboutme.module.css
.aboutMeBlock {
    display: grid;
    grid-template-rows: 1fr 5fr;
    grid-template-columns: 2fr 3fr;
    justify-items: center;

    height: 100%;
}

.profileImage {
    grid-row: 1;
    grid-column: 1;

    width: var(--image-dim);
    height: var(--image-dim);    
    
    object-fit: cover;
    border-radius: 50%;
    
    border: solid var(--highlight);
    border-width: 4.8px;

    --image-dim: 30vmin;
}

.aboutMeText {
    grid-row: 2;
    grid-column: 1;

    width: 100%;
    height: 100%;

    margin-left: 5vw;
    padding-top: 10vh;
    padding-right: 6vw;

    font-size: 1.6vmax;
    color: var(--foreground);
    white-space: normal;
}

.name {
    font-weight: bold;
    color: var(--highlight);
}

.skillsBlock {
    grid-row: 1 / -1;
    grid-column: 2;

    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    place-items: center;
    gap: 1vmin;

    width: 80%;
    height: 80%;
}

.skillWidget {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;

    width: var(--size);
    height: calc(2 * var(--size)/3);

    background-color: var(--background-light);

    border: solid var(--foreground);
    border-width: 0.2vmin;
    border-radius: 10px;
    
    --size: 17vmin;
}

.skillImage {
    width: calc(var(--size)/3);
    height: calc(var(--size)/3);

    margin-top: 0.5vmax;
}

.skillName {
    margin-bottom: 0.5vmax;

    font-size: 2vmin;
    color: var(--foreground);
    text-align: center;
}

@media only screen and (max-width: 700px) {
    .aboutMeBlock {
        grid-template-rows: 1fr 3fr;
        grid-template-columns: 1fr 5fr;
    }

    .profileImage {
        margin-left: 5vw;
    }
    
    .aboutMeText {
        grid-row: 1;
        grid-column: 2;
        align-self: center;

        padding-top: 0;
        padding-left: 5vw;
    }

    .skillsBlock {
        grid-row: 2;
        grid-column: 1/-1;
        align-self: center;

        gap: 0;
    }
}

